--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "clipboard": "^2.0.0",
+    "clipboard": "^2.0.1",
     "codemirror": "^5.38.0",
     "countup": "^1.8.2",
     "cropperjs": "^1.2.2",
@@ -22,10 +22,13 @@
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
+    "quill": "^1.3.6",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "vue": "^2.5.10",
     "vue-i18n": "^7.8.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-quill-editor-upload": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
