--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
+    "qrcodejs2": "0.0.2",
     "quill": "^1.3.6",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
